# edu-saas

./: .env  .env.example  .gitignore  docker-compose.yml  package-lock.json  roadmap-backend.txt
Docs/: 01-visao-produto-e-escopo-mvp.md  02-arquitetura-tecnologia.md  03-dominio-entidades-e-rbac.md  04-modelo-de-dados.md  05-requisitos-funcionais.md  06-modulos-interface-por-perfil.md  07-api-contrato-backend.md  08-configuracoes-sistema.md  09-historias-usuario-gherkin.md  10-status-implementacao.md  (+4 more)
backend/: .dockerignore  .env.example  Dockerfile.dev  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_demo_bootstrap.py  002_documento_rico.py  003_comunicado_destinatario_professor.py  003_demo_bootstrap.py  004_avaliacao_inativa.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/controllers/: AvaliacoesController.py  ComunicadosController.py  ConfiguracoesController.py  ConteudoController.py  DashboardController.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  analytics.py  avaliacoes.py  base.py  comunicados.py  conteudo.py  enums.py  governanca.py
backend/app/schemas/: auth.py  avaliacoes.py  common.py  comunicados.py  configuracoes.py  conteudo.py  dashboard.py  documento.py
backend/app/services/: _helpers.py  avaliacao_ia_service.py  avaliacoes_service.py  comunicados_service.py  configuracoes_service.py  conteudo_service.py  dashboard_service.py
backend/scripts/: demo_bootstrap.py  seed.py
(+145 files in other folders)
