[project]
name = "edusaas-backend"
version = "0.1.0"
description = "EduSaaS API — gestão educacional"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.9.0",
    "email-validator>=2.2.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
